Add CSS class name prefix

--- a/css/bulma-prefixed.css
+++ b/css/bulma-prefixed.css
@@ -11823,4 +11823,4 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem;
 }
-/*# sourceMappingURL=bulma.css.map */
+/*# sourceMappingURL=bulma-prefixed.css.map */
