--- a/docs/css/bulma.css
+++ b/docs/css/bulma.css
@@ -1,4 +1,5 @@
-/*! bulma.io v0.9.3 | MIT License | github.com/jgthms/bulma */
+@charset "UTF-8";
+/*! bulma.io v0.9.4 | MIT License | github.com/jgthms/bulma */
 /* Bulma Utilities */
 .button, .input, .textarea, .select select, .file-cta,
 .file-name, .pagination-previous,
@@ -510,8 +511,8 @@ a.box:active {
 }
 
 .button .icon:first-child:last-child {
-  margin-left: calc(-0.5em - 1px);
-  margin-right: calc(-0.5em - 1px);
+  margin-left: calc( -0.5em - 1px);
+  margin-right: calc( -0.5em - 1px);
 }
 
 .button:hover, .button.is-hovered {
@@ -2812,7 +2813,7 @@ div.icon-text {
 }
 
 .table th:not([align]) {
-  text-align: inherit;
+  text-align: left;
 }
 
 .table tr.is-selected {
@@ -4603,7 +4604,7 @@ fieldset[disabled] .select select:hover {
 
 .breadcrumb li + li::before {
   color: #b5b5b5;
-  content: "\0002f";
+  content: "/";
 }
 
 .breadcrumb ul,
@@ -4645,19 +4646,19 @@ fieldset[disabled] .select select:hover {
 }
 
 .breadcrumb.has-arrow-separator li + li::before {
-  content: "\02192";
+  content: "→";
 }
 
 .breadcrumb.has-bullet-separator li + li::before {
-  content: "\02022";
+  content: "•";
 }
 
 .breadcrumb.has-dot-separator li + li::before {
-  content: "\000b7";
+  content: "·";
 }
 
 .breadcrumb.has-succeeds-separator li + li::before {
-  content: "\0227B";
+  content: "≻";
 }
 
 .card {
