--- a/sass/components/breadcrumb.scss
+++ b/sass/components/breadcrumb.scss
@@ -9,7 +9,7 @@ $breadcrumb-item-padding-horizontal: 0.75em !default;
 
 $breadcrumb-item-separator-color: $border-hover !default;
 
-.breadcrumb {
+.#{$class-prefix}breadcrumb {
   @extend %block;
 
   @extend %unselectable;
@@ -22,7 +22,8 @@ $breadcrumb-item-separator-color: $border-hover !default;
     color: $breadcrumb-item-color;
     display: flex;
     justify-content: center;
-    padding: $breadcrumb-item-padding-vertical $breadcrumb-item-padding-horizontal;
+    padding: $breadcrumb-item-padding-vertical
+      $breadcrumb-item-padding-horizontal;
 
     &:hover {
       color: $breadcrumb-item-hover-color;
@@ -59,7 +60,7 @@ $breadcrumb-item-separator-color: $border-hover !default;
     justify-content: flex-start;
   }
 
-  .icon {
+  .#{$class-prefix}icon {
     &:first-child {
       @include ltr-property("margin", 0.5em);
     }
