--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -20,7 +20,7 @@ $card-footer-padding: 0.75rem !default;
 
 $card-media-margin: $block-spacing !default;
 
-.card {
+.#{$class-prefix}card {
   background-color: $card-background-color;
   border-radius: $card-radius;
   box-shadow: $card-shadow;
@@ -41,7 +41,7 @@ $card-media-margin: $block-spacing !default;
   }
 }
 
-.card-header {
+.#{$class-prefix}card-header {
   @extend %card-item;
 
   background-color: $card-header-background-color;
@@ -50,7 +50,7 @@ $card-media-margin: $block-spacing !default;
   display: flex;
 }
 
-.card-header-title {
+.#{$class-prefix}card-header-title {
   align-items: center;
   color: $card-header-color;
   display: flex;
@@ -63,7 +63,7 @@ $card-media-margin: $block-spacing !default;
   }
 }
 
-.card-header-icon {
+.#{$class-prefix}card-header-icon {
   @include reset;
 
   align-items: center;
@@ -73,7 +73,7 @@ $card-media-margin: $block-spacing !default;
   padding: $card-header-padding;
 }
 
-.card-image {
+.#{$class-prefix}card-image {
   display: block;
   position: relative;
 
@@ -92,14 +92,14 @@ $card-media-margin: $block-spacing !default;
   }
 }
 
-.card-content {
+.#{$class-prefix}card-content {
   @extend %card-item;
 
   background-color: $card-content-background-color;
   padding: $card-content-padding;
 }
 
-.card-footer {
+.#{$class-prefix}card-footer {
   @extend %card-item;
 
   background-color: $card-footer-background-color;
@@ -108,7 +108,7 @@ $card-media-margin: $block-spacing !default;
   display: flex;
 }
 
-.card-footer-item {
+.#{$class-prefix}card-footer-item {
   align-items: center;
   display: flex;
   flex-basis: 0;
@@ -124,8 +124,8 @@ $card-media-margin: $block-spacing !default;
 
 // Combinations
 
-.card {
-  .media:not(:last-child) {
+.#{$class-prefix}card {
+  .#{$class-prefix}media:not(:last-child) {
     margin-bottom: $card-media-margin;
   }
 }
