--- a/sass/components/dropdown.scss
+++ b/sass/components/dropdown.scss
@@ -19,27 +19,27 @@ $dropdown-item-active-background-color: $link !default;
 
 $dropdown-divider-background-color: $border-light !default;
 
-.dropdown {
+.#{$class-prefix}dropdown {
   display: inline-flex;
   position: relative;
   vertical-align: top;
 
   &.is-active,
   &.is-hoverable:hover {
-    .dropdown-menu {
+    .#{$class-prefix}dropdown-menu {
       display: block;
     }
   }
 
   &.is-right {
-    .dropdown-menu {
+    .#{$class-prefix}dropdown-menu {
       left: auto;
       right: 0;
     }
   }
 
   &.is-up {
-    .dropdown-menu {
+    .#{$class-prefix}dropdown-menu {
       bottom: 100%;
       padding-bottom: $dropdown-content-offset;
       padding-top: initial;
@@ -48,7 +48,7 @@ $dropdown-divider-background-color: $border-light !default;
   }
 }
 
-.dropdown-menu {
+.#{$class-prefix}dropdown-menu {
   display: none;
 
   @include ltr-position(0, false);
@@ -60,7 +60,7 @@ $dropdown-divider-background-color: $border-light !default;
   z-index: $dropdown-content-z;
 }
 
-.dropdown-content {
+.#{$class-prefix}dropdown-content {
   background-color: $dropdown-content-background-color;
   border-radius: $dropdown-content-radius;
   box-shadow: $dropdown-content-shadow;
@@ -68,7 +68,7 @@ $dropdown-divider-background-color: $border-light !default;
   padding-top: $dropdown-content-padding-top;
 }
 
-.dropdown-item {
+.#{$class-prefix}dropdown-item {
   color: $dropdown-item-color;
   display: block;
   font-size: 0.875rem;
@@ -77,8 +77,8 @@ $dropdown-divider-background-color: $border-light !default;
   position: relative;
 }
 
-a.dropdown-item,
-button.dropdown-item {
+a.#{$class-prefix}dropdown-item,
+button.#{$class-prefix}dropdown-item {
   @include ltr-property("padding", 3rem);
 
   text-align: inherit;
@@ -96,7 +96,7 @@ button.dropdown-item {
   }
 }
 
-.dropdown-divider {
+.#{$class-prefix}dropdown-divider {
   background-color: $dropdown-divider-background-color;
   border: none;
   display: block;
