--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -18,7 +18,7 @@ $menu-label-font-size: 0.75em !default;
 $menu-label-letter-spacing: 0.1em !default;
 $menu-label-spacing: 1em !default;
 
-.menu {
+.#{$class-prefix}menu {
   font-size: $size-normal;
 
   // Sizes
@@ -35,7 +35,7 @@ $menu-label-spacing: 1em !default;
   }
 }
 
-.menu-list {
+.#{$class-prefix}menu-list {
   line-height: $menu-list-line-height;
 
   a {
@@ -67,7 +67,7 @@ $menu-label-spacing: 1em !default;
   }
 }
 
-.menu-label {
+.#{$class-prefix}menu-label {
   color: $menu-label-color;
   font-size: $menu-label-font-size;
   letter-spacing: $menu-label-letter-spacing;
