--- a/sass/elements/content.scss
+++ b/sass/elements/content.scss
@@ -22,7 +22,7 @@ $content-table-body-last-row-cell-border-bottom-width: 0 !default;
 $content-table-foot-cell-border-width: 2px 0 0 !default;
 $content-table-foot-cell-color: $text-strong !default;
 
-.content {
+.#{$class-prefix}content {
   @extend %block;
 
   // Inline
@@ -236,7 +236,7 @@ $content-table-foot-cell-color: $text-strong !default;
     }
   }
 
-  .tabs {
+  .#{$class-prefix}tabs {
     li + li {
       margin-top: 0;
     }
