--- a/sass/elements/icon.scss
+++ b/sass/elements/icon.scss
@@ -4,7 +4,7 @@ $icon-dimensions-medium: 2rem !default;
 $icon-dimensions-large: 3rem !default;
 $icon-text-spacing: 0.25em !default;
 
-.icon {
+.#{$class-prefix}icon {
   align-items: center;
   display: inline-flex;
   justify-content: center;
@@ -28,7 +28,7 @@ $icon-text-spacing: 0.25em !default;
   }
 }
 
-.icon-text {
+.#{$class-prefix}icon-text {
   align-items: flex-start;
   color: inherit;
   display: inline-flex;
@@ -36,7 +36,7 @@ $icon-text-spacing: 0.25em !default;
   line-height: $icon-dimensions;
   vertical-align: top;
 
-  .icon {
+  .#{$class-prefix}icon {
     flex-grow: 0;
     flex-shrink: 0;
 
@@ -44,7 +44,6 @@ $icon-text-spacing: 0.25em !default;
       @include ltr {
         margin-right: $icon-text-spacing;
       }
-
 
       @include rtl {
         margin-left: $icon-text-spacing;
@@ -56,7 +55,6 @@ $icon-text-spacing: 0.25em !default;
         margin-left: $icon-text-spacing;
       }
 
-
       @include rtl {
         margin-right: $icon-text-spacing;
       }
@@ -64,6 +62,6 @@ $icon-text-spacing: 0.25em !default;
   }
 }
 
-div.icon-text {
+div.#{$class-prefix}icon-text {
   display: flex;
 }
