--- a/sass/elements/notification.scss
+++ b/sass/elements/notification.scss
@@ -9,7 +9,7 @@ $notification-padding-rtl: 1.25rem 1.5rem 1.25rem 2.5rem !default;
 
 $notification-colors: $colors !default;
 
-.notification {
+.#{$class-prefix}notification {
   @extend %block;
 
   background-color: $notification-background-color;
@@ -20,13 +20,11 @@ $notification-colors: $colors !default;
     padding: $notification-padding-ltr;
   }
 
-
   @include rtl {
     padding: $notification-padding-rtl;
   }
 
-
-  a:not(.button):not(.dropdown-item) {
+  a:not(.#{$class-prefix}button):not(.#{$class-prefix}dropdown-item) {
     color: currentColor;
     text-decoration: underline;
   }
@@ -44,16 +42,16 @@ $notification-colors: $colors !default;
     background: transparent;
   }
 
-  & > .delete {
+  & > .#{$class-prefix}delete {
     @include ltr-position(0.5rem);
 
     position: absolute;
     top: 0.5rem;
   }
 
-  .title,
-  .subtitle,
-  .content {
+  .#{$class-prefix}title,
+  .#{$class-prefix}subtitle,
+  .#{$class-prefix}content {
     color: currentColor;
   }
 
