--- a/sass/elements/other.scss
+++ b/sass/elements/other.scss
@@ -1,14 +1,14 @@
 @import "../utilities/mixins";
 
-.block {
+.#{$class-prefix}block {
   @extend %block;
 }
 
-.delete {
+.#{$class-prefix}delete {
   @extend %delete;
 }
 
-.heading {
+.#{$class-prefix}heading {
   display: block;
   font-size: 11px;
   letter-spacing: 1px;
@@ -16,11 +16,11 @@
   text-transform: uppercase;
 }
 
-.loader {
+.#{$class-prefix}loader {
   @extend %loader;
 }
 
-.number {
+.#{$class-prefix}number {
   align-items: center;
   background-color: $background;
   border-radius: $radius-rounded;
