--- a/sass/elements/table.scss
+++ b/sass/elements/table.scss
@@ -28,7 +28,7 @@ $table-striped-row-even-hover-background-color: $scheme-main-ter !default;
 
 $table-colors: $colors !default;
 
-.table {
+.#{$class-prefix}table {
   @extend %block;
 
   background-color: $table-background-color;
@@ -196,7 +196,7 @@ $table-colors: $colors !default;
   }
 }
 
-.table-container {
+.#{$class-prefix}table-container {
   @extend %block;
 
   @include overflow-touch;
