--- a/sass/elements/title.scss
+++ b/sass/elements/title.scss
@@ -19,8 +19,8 @@ $subtitle-strong-color: $text-strong !default;
 $subtitle-strong-weight: $weight-semibold !default;
 $subtitle-negative-margin: -1.25rem !default;
 
-.title,
-.subtitle {
+.#{$class-prefix}title,
+.#{$class-prefix}subtitle {
   @extend %block;
 
   word-break: break-word;
@@ -38,12 +38,12 @@ $subtitle-negative-margin: -1.25rem !default;
     font-size: $title-sup-size;
   }
 
-  .tag {
+  .#{$class-prefix}tag {
     vertical-align: middle;
   }
 }
 
-.title {
+.#{$class-prefix}title {
   color: $title-color;
 
   @if $title-family {
@@ -59,7 +59,7 @@ $subtitle-negative-margin: -1.25rem !default;
     font-weight: $title-strong-weight;
   }
 
-  &:not(.is-spaced) + .subtitle {
+  &:not(.is-spaced) + .#{$class-prefix}subtitle {
     margin-top: $subtitle-negative-margin;
   }
 
@@ -73,7 +73,7 @@ $subtitle-negative-margin: -1.25rem !default;
   }
 }
 
-.subtitle {
+.#{$class-prefix}subtitle {
   color: $subtitle-color;
 
   @if $subtitle-family {
@@ -89,7 +89,7 @@ $subtitle-negative-margin: -1.25rem !default;
     font-weight: $subtitle-strong-weight;
   }
 
-  &:not(.is-spaced) + .title {
+  &:not(.is-spaced) + .#{$class-prefix}title {
     margin-top: $subtitle-negative-margin;
   }
 
