--- a/sass/form/checkbox-radio.scss
+++ b/sass/form/checkbox-radio.scss
@@ -20,14 +20,14 @@
   }
 }
 
-.checkbox {
+.#{$class-prefix}checkbox {
   @extend %checkbox-radio;
 }
 
-.radio {
+.#{$class-prefix}radio {
   @extend %checkbox-radio;
 
-  & + .radio {
+  & + .#{$class-prefix}radio {
     @include ltr-property("margin", 0.5em, false);
   }
 }
