--- a/sass/form/select.scss
+++ b/sass/form/select.scss
@@ -1,6 +1,6 @@
 $select-colors: $form-colors !default;
 
-.select {
+.#{$class-prefix}select {
   display: inline-block;
   max-width: 100%;
   position: relative;
