--- a/sass/grid/tiles.scss
+++ b/sass/grid/tiles.scss
@@ -2,7 +2,7 @@
 
 $tile-spacing: 0.75rem !default;
 
-.tile {
+.#{$class-prefix}tile {
   align-items: stretch;
   display: block;
   flex-basis: 0;
@@ -36,7 +36,7 @@ $tile-spacing: 0.75rem !default;
   &.is-vertical {
     flex-direction: column;
 
-    & > .tile.is-child:not(:last-child) {
+    & > .#{$class-prefix}tile.is-child:not(:last-child) {
       margin-bottom: 1.5rem !important;
     }
   }
