--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -4,7 +4,7 @@ $footer-background-color: $scheme-main-bis !default;
 $footer-color: false !default;
 $footer-padding: 3rem 1.5rem 6rem !default;
 
-.footer {
+.#{$class-prefix}footer {
   background-color: $footer-background-color;
   padding: $footer-padding;
 
