--- a/sass/layout/section.scss
+++ b/sass/layout/section.scss
@@ -5,7 +5,7 @@ $section-padding-desktop: 3rem 3rem !default;
 $section-padding-medium: 9rem 4.5rem !default;
 $section-padding-large: 18rem 6rem !default;
 
-.section {
+.#{$class-prefix}section {
   padding: $section-padding;
 
   // Responsiveness
