--- a/sass/utilities/initial-variables.scss
+++ b/sass/utilities/initial-variables.scss
@@ -26,7 +26,9 @@ $red: hsl(348, 86%, 61%) !default;
 
 // Typography
 
-$family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default;
+$family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto",
+  "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  "Helvetica", "Arial", sans-serif !default;
 $family-monospace: monospace !default;
 $render-mode: optimizeLegibility !default;
 
@@ -66,7 +68,44 @@ $widescreen-enabled: true !default;
 // 1344px container + 4rem
 $fullhd: 1344px + 2 * $gap !default;
 $fullhd-enabled: true !default;
-$breakpoints: ("mobile": ("until": $tablet), "tablet": ("from": $tablet), "tablet-only": ("from": $tablet, "until": $desktop), "touch": ("from": $desktop), "desktop": ("from": $desktop), "desktop-only": ("from": $desktop, "until": $widescreen), "until-widescreen": ("until": $widescreen), "widescreen": ("from": $widescreen), "widescreen-only": ("from": $widescreen, "until": $fullhd), "until-fullhd": ("until": $fullhd), "fullhd": ("from": $fullhd)) !default;
+$breakpoints: (
+  "mobile": (
+    "until": $tablet
+  ),
+  "tablet": (
+    "from": $tablet
+  ),
+  "tablet-only": (
+    "from": $tablet,
+    "until": $desktop
+  ),
+  "touch": (
+    "from": $desktop
+  ),
+  "desktop": (
+    "from": $desktop
+  ),
+  "desktop-only": (
+    "from": $desktop,
+    "until": $widescreen
+  ),
+  "until-widescreen": (
+    "until": $widescreen
+  ),
+  "widescreen": (
+    "from": $widescreen
+  ),
+  "widescreen-only": (
+    "from": $widescreen,
+    "until": $fullhd
+  ),
+  "until-fullhd": (
+    "until": $fullhd
+  ),
+  "fullhd": (
+    "from": $fullhd
+  )
+) !default;
 
 // Miscellaneous
 
@@ -81,3 +120,7 @@ $speed: 86ms !default;
 
 $variable-columns: true !default;
 $rtl: false !default;
+
+// Prefixes
+
+$class-prefix: "" !default;
