--- a/sass/components/media.scss
+++ b/sass/components/media.scss
@@ -9,35 +9,35 @@ $media-level-1-spacing: 0.75rem !default;
 $media-level-1-content-spacing: 0.5rem !default;
 $media-level-2-spacing: 0.5rem !default;
 
-.media {
+.#{$class-prefix}media {
   align-items: flex-start;
   display: flex;
   text-align: inherit;
 
-  .content:not(:last-child) {
+  .#{$class-prefix}content:not(:last-child) {
     margin-bottom: $media-content-spacing;
   }
 
-  .media {
+  .#{$class-prefix}media {
     border-top: $media-border-size solid $media-border-color;
     display: flex;
     padding-top: $media-level-1-spacing;
 
-    .content:not(:last-child),
-    .control:not(:last-child) {
+    .#{$class-prefix}content:not(:last-child),
+    .#{$class-prefix}control:not(:last-child) {
       margin-bottom: $media-level-1-content-spacing;
     }
 
-    .media {
+    .#{$class-prefix}media {
       padding-top: $media-level-2-spacing;
 
-      & + .media {
+      & + .#{$class-prefix}media {
         margin-top: $media-level-2-spacing;
       }
     }
   }
 
-  & + .media {
+  & + .#{$class-prefix}media {
     border-top: $media-border-size solid $media-border-color;
     margin-top: $media-spacing;
     padding-top: $media-spacing;
@@ -45,29 +45,29 @@ $media-level-2-spacing: 0.5rem !default;
 
   // Sizes
   &.is-large {
-    & + .media {
+    & + .#{$class-prefix}media {
       margin-top: $media-spacing-large;
       padding-top: $media-spacing-large;
     }
   }
 }
 
-.media-left,
-.media-right {
+.#{$class-prefix}media-left,
+.#{$class-prefix}media-right {
   flex-basis: auto;
   flex-grow: 0;
   flex-shrink: 0;
 }
 
-.media-left {
+.#{$class-prefix}media-left {
   @include ltr-property("margin", $media-spacing);
 }
 
-.media-right {
+.#{$class-prefix}media-right {
   @include ltr-property("margin", $media-spacing, false);
 }
 
-.media-content {
+.#{$class-prefix}media-content {
   flex-basis: auto;
   flex-grow: 1;
   flex-shrink: 1;
@@ -75,7 +75,7 @@ $media-level-2-spacing: 0.5rem !default;
 }
 
 @include mobile {
-  .media-content {
+  .#{$class-prefix}media-content {
     overflow-x: auto;
   }
 }
