--- a/sass/elements/box.scss
+++ b/sass/elements/box.scss
@@ -6,10 +6,12 @@ $box-radius: $radius-large !default;
 $box-shadow: $shadow !default;
 $box-padding: 1.25rem !default;
 
-$box-link-hover-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0 0 1px $link !default;
-$box-link-active-shadow: inset 0 1px 2px rgba($scheme-invert, 0.2), 0 0 0 1px $link !default;
+$box-link-hover-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1),
+  0 0 0 1px $link !default;
+$box-link-active-shadow: inset 0 1px 2px rgba($scheme-invert, 0.2),
+  0 0 0 1px $link !default;
 
-.box {
+.#{$class-prefix}box {
   @extend %block;
 
   background-color: $box-background-color;
@@ -20,7 +22,7 @@ $box-link-active-shadow: inset 0 1px 2px rgba($scheme-invert, 0.2), 0 0 0 1px $l
   padding: $box-padding;
 }
 
-a.box {
+a.#{$class-prefix}box {
   &:hover,
   &:focus {
     box-shadow: $box-link-hover-shadow;
