--- a/sass/form/input-textarea.scss
+++ b/sass/form/input-textarea.scss
@@ -56,7 +56,7 @@ $textarea-colors: $form-colors !default;
   }
 }
 
-.input {
+.#{$class-prefix}input {
   @extend %input-textarea;
 
   &.is-rounded {
@@ -74,7 +74,7 @@ $textarea-colors: $form-colors !default;
   }
 }
 
-.textarea {
+.#{$class-prefix}textarea {
   @extend %input-textarea;
 
   display: block;
